いろいろ実装
